// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"algorithm" option matches snapshot for \`gzip\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    194,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.2acf4b87f27668ec188c.js",
    15980,
    Object {
      "chunkhash": "2acf4b87f27668ec188c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2acf4b87f27668ec188c.js.gz",
      },
      "size": 15980,
    },
  ],
  Array [
    "main.2acf4b87f27668ec188c.js.gz",
    3975,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3975,
    },
  ],
]
`;

exports[`"algorithm" option matches snapshot for \`gzip\` value ({String}): errors 1`] = `Array []`;

exports[`"algorithm" option matches snapshot for \`gzip\` value ({String}): warnings 1`] = `Array []`;

exports[`"algorithm" option matches snapshot for \`unknown\` value ({String}) 1`] = `"Algorithm \\"unknown\\" is not found in \\"zlib\\""`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzed": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    194,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "main.2acf4b87f27668ec188c.js",
    15980,
    Object {
      "chunkhash": "2acf4b87f27668ec188c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzed": "main.2acf4b87f27668ec188c.js.gz",
      },
      "size": 15980,
    },
  ],
  Array [
    "main.2acf4b87f27668ec188c.js.gz",
    15980,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 15980,
    },
  ],
]
`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): compressionOptions 1`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): compressionOptions 2`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): compressionOptions 3`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): compressionOptions 4`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"algorithm" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    194,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  Array [
    "main.2acf4b87f27668ec188c.js",
    15980,
    Object {
      "chunkhash": "2acf4b87f27668ec188c",
      "immutable": true,
      "javascriptModule": false,
      "size": 15980,
    },
  ],
]
`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): compressionOptions 1`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): compressionOptions 2`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): compressionOptions 3`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): compressionOptions 4`] = `Object {}`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): errors 1`] = `
Array [
  "Error",
  "Error",
  "Error",
  "Error",
]
`;

exports[`"algorithm" option matches snapshot for custom function with error ({Function}): warnings 1`] = `Array []`;
